changes in container 1, fixed text and gap

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     margin: 0px;
-    font-family: roboto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header{
     display: flex;
     flex-direction: row;
-    width: 900px;
+    width: 950px;
     height: auto;
 }
 
@@ -36,12 +36,12 @@ body{
 }
 
 .initialView{
-    width: 900px;
+    width: 950px;
     height: 400px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 16px;
+    gap: 64px;
 }
 
 .info h2{
@@ -63,7 +63,7 @@ button{
     border: 0px;    
     width: 117px;
     height: 32px;
-    font-family: roboto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #F9FAF8;
     font-weight: bold;
     font-size: 18px;
